--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+#application
+server.port =8090
+spring.application.name =ScopeLearn
 
+#db_properties
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3333/scope_learn
+spring.datasource.username=root
+spring.datasource.password=alekha
