--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 #application
-server.port =8090
-spring.application.name =ScopeLearn
+server.port=8090
+spring.application.name=ScopeLearn
+spring.mvc.view.prefix=/jsp/
+spring.mvc.view.suffix=.jsp
 
 #db_properties
-spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3333/scope_learn
 spring.datasource.username=root
-spring.datasource.password=alekha
+spring.datasource.password=alekharout
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
