--- a/pom.xml
+++ b/pom.xml
@@ -61,10 +61,10 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
+		</dependency> -->
 		<!-- log4j -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
