--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #application
-server.port=8089
+server.port=8090
 spring.application.name=ScopeLearn
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
@@ -19,3 +19,18 @@ spring.queries.users-query=SELECT * FROM RegisterDetails WHERE username=?
 
 
 
+
+#Spring mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=alekharout09@gmail.com
+spring.mail.password=alekha@09
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
