--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,11 +13,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+spring.banner.location=banner.txt
 
 #queries
 spring.queries.users-query=SELECT * FROM RegisterDetails WHERE username=?
-
-
 
 
 #Spring mail
